# nvidia-jetson-competition

./: .gitignore  README.md  Thump.py
jetson_ws/src/beat_detector/: CMakeLists.txt  beat_detector.py  input_microphone.py  package.xml
jetson_ws/src/beat_detector/scripts/: beat_detector.py
jetson_ws/src/beat_makers/: CMakeLists.txt  beat_detector.py  keyboard2beats.py  package.xml
jetson_ws/src/beat_makers/scripts/: beat_detector.py  keyboard2beats.py
jetson_ws/src/beat_msgs/: CMakeLists.txt  package.xml
jetson_ws/src/beat_msgs/msg/: Beat.msg  PercussionBar.msg  SetBeat.msg  SimplePercussionBar.msg  SingleBeat.msg
jetson_ws/src/beat_player/: CMakeLists.txt  beat_player.py  package.xml
jetson_ws/src/beat_player/scripts/: beat_player.py
jetson_ws/src/beat_players/drummer/: CMakeLists.txt  thump.py  whiplash.py
jetson_ws/src/beats_gui/: CMakeLists.txt  package.xml
jetson_ws/src/beats_gui/src/: gui.cpp
jetson_ws/src/drummer/: CMakeLists.txt  package.xml  thump.py  whiplash.py
jetson_ws/src/insturments/buzzer/: CMakeLists.txt  package.xml
jetson_ws/src/jetson_beats/: CMakeLists.txt  package.xml
jetson_ws/src/jetson_beats/launch/: beats_by_jetson.launch
jetson_ws/src/master_of_beats/: CMakeLists.txt  beat_player.py  beat_predictor.py  package.xml  rhythm.py
jetson_ws/src/master_of_rhythm/: beat_player.py  rhythm.py
jetson_ws/src/master_of_rhythm/scripts/: beat_player.py
music/audio/: problem4.m
output/: data.txt  make_manual_beats.py  simple4_3.txt  theska4_8.txt
src/: record_microphone.py
test_scripts/: Thump.py  audio.py  forecast.py  gpio_test.py  live_pitch.py  pi_barebones.py  rhythm_drummer.py  soundcard_test.py  threaded thumper.py  threaded_thumper.py
