<?xml version="1.0"?>
<package format="2">
  <name>beat_msgs</name>
  <version>0.3.0</version>
  <description>The beat_msgs package</description>

  <maintainer email="oakyildiz@wpi.edu">Ozan Akyildiz</maintainer>
  <license>MIT</license>
  <author email="oakyildiz@wpi.edu">Ozan Akyildiz</author>


  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
