<?xml version="1.0"?>
<package format="2">
  <name>buzzer</name>
  <version>0.1.0</version>
  <description>The beat_msgs package</description>

  <maintainer email="oakyildiz@wpi.edu">Ozan Akyildiz</maintainer>
  <license>MIT</license>
  <author email="oakyildiz@wpi.edu">Ozan Akyildiz</author>


<!-- Use build_export_depend for packages you need in order to build against this package: -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>Adafruit_GPIO</exec_depend>

  <depend>std_msgs</depend>
  <depend>beat_msgs</depend>
  <export>

  </export>
</package>
